--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>My Website is Lit. Just Kidding</h1>
+        <h1>My Website is Lit. Just Kidding!</h1>
         <p>Version 1.</p>
     </body>
 </html>
